# gs_SE_SS25

./: .gitignore  README.md  leistungstest.py  main.py  my_classes.py  my_functions.py  pferd.py  pyproject.toml  test.py
