[project]
name = "gs_SE_SS25_Leistungstest"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "gs0232", email = "gs0232@mci4me.at"},
]
dependencies = ["numpy>=2.0.2"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
